kubernetes/apps/default/n8n/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:water-flow
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Software Automation
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: mdi-water-flow
    gethomepage.dev/name: n8n
    gethomepage.dev/widget.type: n8n
    gethomepage.dev/widget.url: "https://n8n.${SECRET_DOMAIN}"
    gethomepage.dev/pod-selector: ""
spec:
  ingressClassName: internal
  rules:
    - host: "n8n.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
  tls:
    - hosts:
        - "n8n.${SECRET_DOMAIN}"
